--- a/Resources/French.lproj/Localizable.strings
+++ b/Resources/French.lproj/Localizable.strings
@@ -1,1 +1,21 @@
-"Quit" = "Quitter";
+"Calendar" = "Calendar";
+"Quit" = "Quit";
+"Jan" = "Jan";
+"Feb" = "F\U00E9v";
+"Mar" = "Mar";
+"Apr" = "Avr";
+"May" = "Mai";
+"Jun" = "Juin";
+"Jul" = "Juil";
+"Aug" = "Août";
+"Sep" = "Sep";
+"Oct" = "Oct";
+"Nov" = "Nov";
+"Dec" = "D\U00E9c";
+"Sun" = "Dim";
+"Mon" = "Lun";
+"Tue" = "Mar";
+"Wed" = "Mer";
+"Thr" = "Jeu";
+"Fri" = "Ven";
+"Sat" = "Sam";
