Fixed the encoding of french Localizable.strings

--- a/Resources/French.lproj/Localizable.strings
+++ b/Resources/French.lproj/Localizable.strings
@@ -7,7 +7,7 @@
 "May" = "Mai";
 "Jun" = "Juin";
 "Jul" = "Juil";
-"Aug" = "Août";
+"Aug" = "Ao\U00FBt";
 "Sep" = "Sep";
 "Oct" = "Oct";
 "Nov" = "Nov";
